# SPDX-FileCopyrightText: 2024 Andrew T. Christensen <andrew@andrewtc.com>
#
# SPDX-License-Identifier: MIT

[package]
name = "posturn"
description = "Build turn-based games with `async` Rust"
version = "0.2.0"
authors = ["Andrew T. Christensen <andrew@andrewtc.com>"]
edition = "2021"
rust-version = "1.75.0" # RECOMMENDED: Use `cargo msrv verify` prior to pushing.
license = "MIT"
repository = "https://github.com/andrewtc/posturn"
keywords = ["gamedev", "game", "turn-based", "coroutine", "async"]
categories = ["game-development", "asynchronous"]
exclude = [".*"]

[dependencies]
genawaiter = "^0.99"

[dev-dependencies]
crossterm = "*"
futures = "^0.3"